Se prueba la libreria ckecker framework